fix(UI): remove dark mode , add loading

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -40,7 +40,7 @@ html.light {
   /* Background loading indicator*/
   --bgLoadingIndicator: rgba(255, 255, 255, 0.8);
 }
-html.dark {
+html.light {
   --layout: #f0f0f0;
   --mainContent: #eaeaea: ;
   --background: var(--foreground);
@@ -90,20 +90,20 @@ html.dark {
   --inputBackground: #4b4b4b;
 
   /* Component Topic Card */
-  /*--textTopicCardWithoutSelect: #fff;
-  --bgTopicCardWithoutSelect: rgba(255, 255, 255, 0.2);
-  --textTopicCardSelected: #000;
-  --bgTopicCardSelected: #fff;
+/* --textTopicCardWithoutSelect: #fff;
+--bgTopicCardWithoutSelect: rgba(255, 255, 255, 0.2);
+--textTopicCardSelected: #000;
+--bgTopicCardSelected: #fff; */
 
 /* Component Category Card */
-/*--textCategoryCardWithoutSelect: #fff;
+/* --textCategoryCardWithoutSelect: #fff;
 --textCategoryCardSelect: #8495a1;
 --bgCategoryCardWithoutSelect: rgba(173, 216, 255, 0.15);
 --bgCategoryCardSelect: #fff;
 --noficationBg: #000000;
 --divideBg: #374151;
 --hoverBg: #4b5563;
---iconBlur: #fff;
+--iconBlur: #fff; */
 /*}
 /* @media (prefers-color-scheme: dark) {
   :root {
@@ -209,10 +209,12 @@ body {
   background: #555;
 }
 input:-webkit-autofill,
-input:-webkit-autofill:hover,
-input:-webkit-autofill:focus,
-input:-webkit-autofill:active {
-  -webkit-background-clip: text;
-  transition: background-color 5000s ease-in-out 0s;
-  box-shadow: inset 0 0 20px 20px #23232300;
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active{
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: #000;
+    transition: background-color 5000s ease-in-out 0s;
+    box-shadow: inset 0 0 20px 20px #23232300;
 }
+
